hphp/hack/test/typecheck/as_expression/keyset2.php.like_types.exp
File "keyset2.php", line 13, characters 18-38:
Invalid argument (Typing[4110])
File "keyset2.php", line 23, characters 25-38:
Expected ~keyset<string> because it is an unenforceable type
File "keyset2.php", line 13, characters 33-38:
But got keyset<arraykey>
File "keyset2.php", line 16, characters 18-41:
Invalid argument (Typing[4110])
File "keyset2.php", line 23, characters 25-38:
Expected ~keyset<string> because it is an unenforceable type
File "keyset2.php", line 16, characters 33-41:
But got keyset<arraykey>
File "keyset2.php", line 12, characters 33-38:
The type keyset expects 1 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 12, characters 22-27:
Definition is here
File "keyset2.php", line 13, characters 33-38:
The type keyset expects 1 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 12, characters 22-27:
Definition is here
